# super-bufrd

./: .gitignore  CMakeLists.txt  README.md  SuperBinaryOpUGen.cpp  SuperBufRd.cpp  SuperBufRd.sc  SuperBufWr.cpp  SuperPair.sc  SuperPoll.cpp  extSuperPair.sc
HelpSource/Classes/: SuperBufFrames.schelp  SuperBufRd.schelp  SuperIndex.schelp  SuperPair.schelp  SuperPhasor.schelp  SuperPhasorX.schelp  SuperPlayBuf.schelp  SuperPlayBufDetails.schelp  SuperPlayBufX.schelp  SuperPlayBufXDetails.schelp  SuperPoll.schelp
HelpSource/Guides/: SuperUGens.schelp
SystemOverwrites/: extSuperPair.sc
Tests/: TestSuperBinaryOpUGen.sc  TestSuperPair.sc
